--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
   Hello World sub domain <br/>
-  <a href="https://ramamohanraju.github.io/">Sub domain: ramamohanraju</a>
+  <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
 </body>
 </html>
