--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   Hello World sub domain <br/>
   <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
   </br>
-  <a href="https://github.com/RammohanRaju/" target="_blank">Github Ram</a>
+  <a href="https://github.com/RammohanRaju/rammohanraju.github.io/blob/main/index.html" target="_blank">Github Ram</a>
   </br>
-  <a href="https://github.com/ramamohanraju/" target="_blank">Github Rama</a>
+  <a href="https://github.com/ramamohanraju/ramamohanraju.github.io/blob/main/index.html" target="_blank">Github Rama</a>
 </body>
 </html>
