--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         setCookie('myCookieSameSubdomain', 'myCookieValueSameSubdomain', 5, 'rammohanraju.github.io', undefined, true);
         setCookie('myCookieBaseDomain', 'myCookieValueBaseDomain', 5, 'github.io', undefined, true);
         setCookie('myCookieOtherSubdomain', 'myCookieValueOtherSubdomain', 5, 'ramamohanraju.github.io', undefined, true);
-        setCookie('_xsrf', 'testValueXsrf', 5, 'ramamohanraju.github.io', undefined, true);
+        document.cookie = "_xsrf=testXsrf"
         //document.cookie = "myCookieSameSubdomain=myCookieValueSameSubdomain;domain=rammohanraju.github.io";
         //document.cookie = "myCookieBaseDomain=myCookieValueBaseDomain;domain=github.io";
         //document.cookie = "myCookieOtherSubdomain=myCookieValueOtherSubdomain;domain=ramamohanraju.github.io";
