add form for communication preferences

--- a/index.html
+++ b/index.html
@@ -43,11 +43,34 @@
     </script>
 </head>
 <body>
-  Hello World sub domain <br/>
-  <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
-  </br>
-  <a href="https://github.com/RammohanRaju/rammohanraju.github.io/blob/main/index.html" target="_blank">Github Ram</a>
-  </br>
-  <a href="https://github.com/ramamohanraju/ramamohanraju.github.io/blob/main/index.html" target="_blank">Github Rama</a>
+    Hello World sub domain(DEV cookie consent) <br/>
+    <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
+    </br>
+    <a href="https://github.com/RammohanRaju/rammohanraju.github.io/blob/main/index.html" target="_blank">Github Ram</a>
+    </br>
+    <a href="https://github.com/ramamohanraju/ramamohanraju.github.io/blob/main/index.html" target="_blank">Github Rama</a>
+
+
+    <div class="rendered-form">
+        <div class="">
+            <h1 access="false" id="control-6129876">Communication preferences(QA)</h1></div>
+        <div class="formbuilder-checkbox-group form-group field-modes-of-communication-1661263239078">
+            <label for="modes-of-communication-1661263239078" class="formbuilder-checkbox-group-label">Modes of communication<span class="formbuilder-required">*</span></label>
+            <div class="checkbox-group">
+                <div class="formbuilder-checkbox">
+                    <label for="modes-of-communication-1661263239078-0" class="kc-toggle">
+                        <input name="modes-of-communication-1661263239078[]" access="false" id="modes-of-communication-1661263239078-0" aria-required="true" value="EmailField" type="checkbox" checked="checked"><span></span>Email</label>
+                </div>
+                <div class="formbuilder-checkbox">
+                    <label for="modes-of-communication-1661263239078-1" class="kc-toggle">
+                        <input name="modes-of-communication-1661263239078[]" access="false" id="modes-of-communication-1661263239078-1" aria-required="true" value="PhoneField" type="checkbox" checked="checked"><span></span>Phone</label>
+                </div>
+                <div class="formbuilder-checkbox">
+                    <label for="modes-of-communication-1661263239078-2" class="kc-toggle">
+                        <input name="modes-of-communication-1661263239078[]" access="false" id="modes-of-communication-1661263239078-2" aria-required="true" value="SMSField" type="checkbox"><span></span>SMS</label>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
