add another sub domain with etc redirect

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     Hello World sub domain(DEV cookie consent) <br/>
     <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
     </br>
+    <a href="https://rammohanraju2.github.io/" target="_blank">Sub domain: with etc redirect</a>
+    </br>
     <a href="https://github.com/RammohanRaju/rammohanraju.github.io/blob/main/index.html" target="_blank">Github Ram</a>
     </br>
     <a href="https://github.com/ramamohanraju/ramamohanraju.github.io/blob/main/index.html" target="_blank">Github Rama</a>
