--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
         //document.cookie = "myCookieSameSubdomain=myCookieValueSameSubdomain;domain=rammohanraju.github.io";
         //document.cookie = "myCookieBaseDomain=myCookieValueBaseDomain;domain=github.io";
         //document.cookie = "myCookieOtherSubdomain=myCookieValueOtherSubdomain;domain=ramamohanraju.github.io";
+        
+    <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
+
         (function () {
             var s = document.createElement('script');
             s.src = 'https://cdn-dev.securiti.xyz/consent/cookie-consent-sdk.js';
             s.setAttribute('data-tenant-uuid', '792ac81b-7715-45c8-b8c1-2c549ba457c0');
-            s.setAttribute('data-domain-uuid', '4d0b3e82-0d61-40f3-bcac-4727f7d7b5c5');
+            s.setAttribute('data-domain-uuid', 'bca6532b-4258-404a-9c10-c3a6bb539875');
             s.setAttribute('data-backend-url', 'https://dev.securiti.xyz');
             s.defer = true;
             var parent_node = document.head || document.body;
@@ -41,6 +44,9 @@
             s.addEventListener('load', function() { window.initCmp(); });
         })()
     </script>
+
+    <!-- You may style the button by overriding class "cmp-revoke-consent" -->
+    <button class="cmp-revoke-consent">Revoke Consent</button>
 </head>
 <body>
     Hello World sub domain(DEV cookie consent) <br/>
