--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' />
     <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
 	
-	<script type="text/javascript" src="https://cdn-dev.securiti.xyz/consent/sdk-stub.js" defer></script>
+<!-- 	<script type="text/javascript" src="https://cdn-dev.securiti.xyz/consent/sdk-stub.js" defer></script> -->
+	<link rel='stylesheet' type='text/css' href='https://cdn-qa.securiti.xyz/consent/cookie-consent.css' />
     <script>
         function setCookie(cname, cvalue, days, domain, path, secure) {
             var a = new Date;
@@ -31,11 +32,11 @@
         //document.cookie = "myCookieSameSubdomain=myCookieValueSameSubdomain;domain=rammohanraju.github.io";
         //document.cookie = "myCookieBaseDomain=myCookieValueBaseDomain;domain=github.io";
         //document.cookie = "myCookieOtherSubdomain=myCookieValueOtherSubdomain;domain=ramamohanraju.github.io";
-        
+        </script>
     <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
 
 
-
+<!-- <script>
 <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
 
 (function () {
@@ -44,6 +45,21 @@
 	s.setAttribute('data-tenant-uuid', '792ac81b-7715-45c8-b8c1-2c549ba457c0');
 	s.setAttribute('data-domain-uuid', '4d0b3e82-0d61-40f3-bcac-4727f7d7b5c5');
 	s.setAttribute('data-backend-url', 'https://dev.securiti.xyz');
+	s.defer = true;
+	var parent_node = document.head || document.body;
+	parent_node.appendChild(s);
+	s.addEventListener('load', function() { window.initCmp(); });
+})()
+</script> -->
+	<script type="text/javascript" src="https://cdn-qa.securiti.xyz/consent/sdk-stub.js" defer></script>
+<!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
+<script>
+(function () {
+	var s = document.createElement('script');
+	s.src = 'https://cdn-qa.securiti.xyz/consent/cookie-consent-sdk.js';
+	s.setAttribute('data-tenant-uuid', 'f75257cd-2139-4d4c-9a68-79659dc2f02a');
+	s.setAttribute('data-domain-uuid', '18497a33-d505-4af6-b095-a74531c2a56e');
+	s.setAttribute('data-backend-url', 'https://qa.securiti.xyz');
 	s.defer = true;
 	var parent_node = document.head || document.body;
 	parent_node.appendChild(s);
