--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-    <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' />
+	<link rel='stylesheet' type='text/css' href='https://cdn-qa.securiti.xyz/consent/cookie-consent.css' />
+
+<!--     <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' /> -->
     <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
 	
 <!-- 	<script type="text/javascript" src="https://cdn-dev.securiti.xyz/consent/sdk-stub.js" defer></script> -->
-	<link rel='stylesheet' type='text/css' href='https://cdn-qa.securiti.xyz/consent/cookie-consent.css' />
     <script>
         function setCookie(cname, cvalue, days, domain, path, secure) {
             var a = new Date;
@@ -36,9 +37,9 @@
     <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
 
 
-<!-- <script>
-<!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
 
+<!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
+<!-- <script>
 (function () {
 	var s = document.createElement('script');
 	s.src = 'https://cdn-dev.securiti.xyz/consent/cookie-consent-sdk.js';
