--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel='stylesheet' type='text/css' href='https://cdn-qa.securiti.xyz/consent/cookie-consent.css' />
+<!-- 	<link rel='stylesheet' type='text/css' href='https://cdn-qa.securiti.xyz/consent/cookie-consent.css' /> -->
 
 <!--     <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' /> -->
     <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
@@ -54,7 +54,7 @@
 </script> -->
 	<script type="text/javascript" src="https://cdn-qa.securiti.xyz/consent/sdk-stub.js" defer></script>
 <!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
-<script>
+<!-- <script>
 (function () {
 	var s = document.createElement('script');
 	s.src = 'https://cdn-qa.securiti.xyz/consent/cookie-consent-sdk.js';
@@ -66,8 +66,24 @@
 	parent_node.appendChild(s);
 	s.addEventListener('load', function() { window.initCmp(); });
 })()
-</script>
+</script> -->
 
+    <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' />
+	<script type="text/javascript" src="https://cdn-dev.securiti.xyz/consent/sdk-stub.js" defer></script>
+	<!-- After adding this script, call setConsentBannerParams({uuid: <unique id> }) to set unique ID for a customer. -->
+	<script>
+	(function () {
+		var s = document.createElement('script');
+		s.src = 'https://cdn-dev.securiti.xyz/consent/cookie-consent-sdk.js';
+		s.setAttribute('data-tenant-uuid', 'a671e20a-47ca-441b-a23c-33430ad1aa10');
+		s.setAttribute('data-domain-uuid', '22b70971-9513-419e-8c04-fc9c3ae62a05');
+		s.setAttribute('data-backend-url', 'https://dev.securiti.xyz');
+		s.defer = true;
+		var parent_node = document.head || document.body;
+		parent_node.appendChild(s);
+		s.addEventListener('load', function() { window.initCmp(); });
+	})()
+	</script>
     <!-- You may style the button by overriding class "cmp-revoke-consent" -->
     <button class="cmp-revoke-consent">Revoke Consent</button>
 </head>
