--- a/index.html
+++ b/index.html
@@ -96,7 +96,16 @@
     <a href="https://github.com/RammohanRaju/rammohanraju.github.io/blob/main/index.html" target="_blank">Github Ram</a>
     </br>
     <a href="https://github.com/ramamohanraju/ramamohanraju.github.io/blob/main/index.html" target="_blank">Github Rama</a>
+    <br> The below form is integrated with consent<br>
+    <form>
+	    <label for="fname">First name:</label><br>
+	    <input type="text" id="fname" name="fname" value="John"><br>
+	    <label for="lname">Last name:</label><br>
+	    <input type="text" id="lname" name="lname" value="Doe"><br><br>
+	    <input type="submit" value="Submit">
+    </form>
 
+    <br><br><br><br>Ignore the form below
 
     <div class="rendered-form">
         <div class="">
