--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
     <a href="https://github.com/ramamohanraju/ramamohanraju.github.io/blob/main/index.html" target="_blank">Github Rama</a>
     <br> The below form is integrated with consent<br>
     <form>
-	    <label for="fname">First name:</label><br>
-	    <input type="text" id="fname" name="fname" value="John"><br>
-	    <label for="lname">Last name:</label><br>
-	    <input type="text" id="lname" name="lname" value="Doe"><br><br>
-	    <input type="submit" value="Submit">
+	  <input type="checkbox" id="email" name="email" value="Email">
+	  <label for="vehicle1"> Email</label><br>
+	  <input type="checkbox" id="Phone" name="phone" value="Phone">
+	  <label for="vehicle2"> Phone</label><br>
+	  <input type="checkbox" id="sms" name="sms" value="SMS">
+	  <label for="vehicle3"> SMS</label><br><br>
+	  <input type="submit" value="Submit">
     </form>
 
     <br><br><br><br>Ignore the form below
