--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <br>
     <h1>Communication preferences(DEV)</h1>
     <br> The below form is integrated with consent<br>
-    <form>
+    <form name="consent-form-name" id="consent-form-id">
 	  <input type="checkbox" id="email" name="email" value="Email">
 	  <label for="vehicle1"> Email</label><br>
 	  <input type="checkbox" id="Phone" name="phone" value="Phone">
