--- a/index.html
+++ b/index.html
@@ -100,12 +100,14 @@
     <h1>Communication preferences(DEV)</h1>
     <br> The below form is integrated with consent<br>
     <form name="consent-form-name" id="consent-form-id">
+	  <label for="emailid">EmailId</label><br>
+          <input type="text" id="emailid" name="emailid" value="EmailId"><br>
 	  <input type="checkbox" id="email" name="email" value="Email">
-	  <label for="vehicle1"> Email</label><br>
+	  <label for="email"> Email</label><br>
 	  <input type="checkbox" id="Phone" name="phone" value="Phone">
-	  <label for="vehicle2"> Phone</label><br>
+	  <label for="phone"> Phone</label><br>
 	  <input type="checkbox" id="sms" name="sms" value="SMS">
-	  <label for="vehicle3"> SMS</label><br><br>
+	  <label for="sms"> SMS</label><br><br>
 	  <input type="submit" value="Submit">
     </form>
 
