--- a/form-with-id.html
+++ b/form-with-id.html
@@ -44,16 +44,16 @@
 	})()
 	</script> -->
     <!-- You may style the button by overriding class "cmp-revoke-consent" -->
-    <button class="cmp-revoke-consent">Revoke Consent</button>
+<!--     <button class="cmp-revoke-consent">Revoke Consent</button> -->
 </head>
 <body>
     Hello World sub domain(DEV cookie consent) <br/>
-    <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
+<!--     <a href="https://ramamohanraju.github.io/" target="_blank">Sub domain: ramamohanraju</a>
     </br>
     <a href="https://rammohanraju2.github.io/" target="_blank">Sub domain: with etc redirect</a>
-    </br>
+    </br> -->
 
-    <h1>Communication preferences(DEV)</h1>
+    <h1>Communication preferences(DEV) Form tab with id assigned(consent-form-id) </h1>
     <br> The below form is integrated with consent<br>
     <form name="consent-form-name" id="consent-form-id">
 	  <label for="emailid">EmailId </label> <input type="text" id="emailid" name="emailid" value="EmailId"><br>
