--- a/form-with-div.html
+++ b/form-with-div.html
@@ -29,7 +29,7 @@
 
     <h1>Communication preferences(DEV) Form tab with id assigned(consent-form-id) </h1>
     <br> The below form is integrated with consent<br>
-    <form name="consent-form-name" id="consent-form-id">
+    <div>
 	  <label for="emailid">EmailId </label> <input type="text" id="emailid" name="emailid" value="EmailId"><br>
 	  <input type="checkbox" id="email" name="email" value="Email">
 	  <label for="email"> Email</label><br>
@@ -38,7 +38,7 @@
 	  <input type="checkbox" id="sms" name="sms" value="SMS">
 	  <label for="sms"> SMS</label><br><br>
 	  <input type="submit" value="Submit">
-    </form>
+    </div>
 
 
 
