--- a/form-samples.html
+++ b/form-samples.html
@@ -28,5 +28,8 @@
     <a href="https://rammohanraju.github.io/form-with-id.html" target="_blank">Form with ID</a> <br>
     <a href="https://rammohanraju.github.io/form-without-id.html" target="_blank">Form without ID</a> <br>
     <a href="https://rammohanraju.github.io/form-with-div.html" target="_blank">Form with Div</a> <br>
+    <a href="https://rammohanraju.github.io/form-with-div-data.html" target="_blank">Form with Div - data attr</a> <br>
+    <a href="https://rammohanraju.github.io/form-with-div-no-attr.html" target="_blank">Form with Div no attribute(name, id, data-)</a> <br>
+
 </body>
 </html>
